# roboverse

./: .deepsource.toml  .eslintrc.js  .gitignore  Dockerfile  Gruntfile.js  Procfile  README.md  karma.conf.js  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml  codeql-analysis.yml  webify_models_test.yml
examples/: screenshots.html  view_sdf_from_file.html
frontend/: README.md  jest.config.js  package-lock.json  package.json  prettier.config.js  rollup.config.js  snowpack.config.js  svelte.config.js  tsconfig.json
frontend/plugins/: snowpack-svelte.js  snowpack-swc-typescript.js
frontend/public/: index.html
frontend/src/: index.ts
frontend/src/lib/: index.ts  (+1 more)
frontend/style/: main.scss  variables.scss
frontend/tests/: setup.ts
frontend/types/: importMeta.ts
gz3d/client/: index.html
gz3d/src/: gz.js  gzgui.js  gziface.js  gzlogplay.js  gzmanipulator.js  gzobjloader.js  gzogre2json.js  gzradialmenu.js  gzscene.js  gzsdfparser.js  gzshaders.js  gzspawnmodel.js
gz3d/test/: gz_test.js  gzgui_test.js  gziface_test.js  gzlogplay_test.js  gzogre2json_test.js  gzscene_test.js  gzsdfparser_test.js  spec_helper.js
gzbridge/: server.js
webify_models/: Cargo.toml
webify_models/src/: main.rs
webify_models/src/cli/: create_progress_bar.rs  mod.rs  parse_args_for_path.rs
webify_models/src/image_processing/: convert_to_png.rs  image.rs  mod.rs  move_to_textures_dir.rs  process.rs  scan_dir_for_images.rs
webify_models/src/mesh_update/: mod.rs  process.rs  rename_image_references.rs  scan_dir_for_meshes.rs
(+99 files in other folders)
