[package]
name = "webify_models"
version = "0.1.0"
authors = ["Jean-Francois Arseneau <jf.arseneau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
indicatif = "0.15.0"
console = "0.14.0"
